--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/encode-sans-semi-condensed": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "~48.0.18",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
@@ -22,12 +23,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-numeric-input": "^1.9.1",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
