--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "@babel/helper-module-transforms": "^7.22.9",
     "@babel/runtime": "^7.22.6",
     "@expo-google-fonts/encode-sans-semi-condensed": "^0.2.3",
+    "@formatjs/intl-datetimeformat": "^6.10.0",
+    "@formatjs/intl-displaynames": "^6.5.0",
+    "@formatjs/intl-getcanonicallocales": "^2.2.1",
+    "@formatjs/intl-listformat": "^7.4.0",
+    "@formatjs/intl-locale": "^3.3.2",
+    "@formatjs/intl-numberformat": "^8.7.0",
+    "@formatjs/intl-pluralrules": "^5.2.4",
+    "@formatjs/intl-relativetimeformat": "^11.2.4",
     "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "~48.0.18",
     "expo-constants": "~14.2.1",
@@ -25,8 +33,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-localize": "^3.0.2",
     "react-native-numeric-input": "^1.9.1",
     "react-native-paper": "^5.8.0",
+    "react-native-paper-dates": "^0.18.12",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
