--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-select-dropdown": "^3.3.4",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.18.7"
   },
