--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-device-info": "^10.8.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-localize": "^3.0.2",
+    "react-native-network-info": "^5.2.1",
     "react-native-numeric-input": "^1.9.1",
     "react-native-paper": "^5.8.0",
     "react-native-paper-dates": "^0.18.12",
@@ -44,7 +46,9 @@
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.4",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-device": "~5.2.1",
+    "expo-network": "~5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
